--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -1,55 +1,144 @@
-name: OpenWrt x86_64 Release (No Build, No Firmware Upload)
+name: Build OpenWrt x86_64
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 2 * * *'  # 每天凌晨2点自动触发
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Restore last built version cache
+        id: cache-version
+        uses: actions/cache@v3
+        with:
+          path: last_build_version.txt
+          key: last-build-version-cache
+          restore-keys: last-build-version-cache
 
       - name: Get latest OpenWrt stable release tag
         id: get_latest_tag
         run: |
-          TAG=$(curl -s https://api.github.com/repos/openwrt/openwrt/tags \
-            | jq -r '.[].name' \
-            | grep '^v[0-9]' \
-            | grep -vE 'rc|SNAPSHOT' \
-            | sort -Vr \
-            | head -n1)
-          if [ -z "$TAG" ]; then
-            echo "No valid tag found, exiting."
-            exit 1
-          fi
+          TAG=$(curl -s https://api.github.com/repos/openwrt/openwrt/tags | jq -r '.[].name' | grep '^v[0-9]' | grep -vE 'rc|SNAPSHOT' | sort -Vr | head -n1)
           echo "latest_tag=$TAG" >> $GITHUB_OUTPUT
 
-      - name: Clone OpenWrt source (shallow)
-        run: git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
+      - name: Compare versions
+        id: compare
+        run: |
+          LAST_VER=$(cat last_build_version.txt 2>/dev/null || echo "none")
+          echo "Last built version: $LAST_VER"
+          echo "Latest upstream version: ${{ steps.get_latest_tag.outputs.latest_tag }}"
+          if [ "$LAST_VER" = "${{ steps.get_latest_tag.outputs.latest_tag }}" ]; then
+            echo "No new version detected. Skipping build."
+            exit 78
+          else
+            echo "New version detected. Proceeding."
+          fi
 
-      - name: Get version from git tag
-        id: getversion
+      - name: Clone OpenWrt source
+        run: |
+          git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
+
+      - name: Free up disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+      - name: Show available disk space
+        run: df -h
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            python3 python3-setuptools python3-distutils-extra \
+            build-essential clang flex bison g++ gawk \
+            gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+            rsync unzip zlib1g-dev file wget python3-pyelftools ccache ash
+
+      - name: Update all feeds
         run: |
           cd openwrt
-          VERSION=$(git describe --tags --abbrev=0)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
 
-      - name: Get current time
+      - name: Prepare openwrt/scripts directory
+        run: mkdir -p openwrt/scripts
+
+      - name: Copy config and scripts
+        run: |
+          cp config/.config openwrt/.config
+          cp config/customize.sh openwrt/
+          cp -r scripts/. openwrt/scripts/
+          chmod +x openwrt/customize.sh openwrt/scripts/*.sh
+
+      - name: List openwrt/scripts contents
+        run: ls -l openwrt/scripts
+
+      - name: Run ext_packages.sh if present
+        run: |
+          cd openwrt
+          if [ -f scripts/ext_packages.sh ]; then
+            chmod +x scripts/ext_packages.sh
+            ./scripts/ext_packages.sh
+          else
+            echo "❌ ext_packages.sh not found!"
+            exit 1
+          fi
+
+      - name: Run customize.sh
+        run: |
+          cd openwrt
+          chmod +x customize.sh
+          ./customize.sh
+
+      - name: Make defconfig and download sources
+        run: |
+          cd openwrt
+          make defconfig
+          make download -j8
+
+      - name: Build OpenWrt x86_64
+        run: |
+          cd openwrt
+          make -j$(nproc) || make -j1 V=s
+
+      - name: Get build time
         id: buildtime
         run: echo "time=$(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
-      - name: Create GitHub Release (No Build)
+      - name: Create GitHub Release and upload firmware
         uses: ncipollo/release-action@v1
         with:
           token: ${{ secrets.IGH_TOKEN }}
-          tag: ${{ steps.getversion.outputs.version }}
-          name: OpenWrt x86_64 ${{ steps.getversion.outputs.version }}
+          tag: ${{ steps.get_latest_tag.outputs.latest_tag }}
+          name: OpenWrt x86_64 ${{ steps.get_latest_tag.outputs.latest_tag }}
           body: |
-            🧪 OpenWrt x86_64 测试发布，未编译固件
-            🔖 版本: ${{ steps.getversion.outputs.version }}
-            📅 时间: ${{ steps.buildtime.outputs.time }}
-          draft: false
-          prerelease: true
+            🎉 OpenWrt x86_64 ${{ steps.get_latest_tag.outputs.latest_tag }}
+            📅 构建时间：${{ steps.buildtime.outputs.time }}
+            🔗 上游源码：https://github.com/openwrt/openwrt/tree/${{ steps.get_latest_tag.outputs.latest_tag }}
+            🛠️ 构建日志：https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          artifacts: openwrt/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined-efi.img.gz
+          makeLatest: true
           skipIfReleaseExists: true
+
+      - name: Save latest built version to file
+        run: echo "${{ steps.get_latest_tag.outputs.latest_tag }}" > last_build_version.txt
+
+      - name: Save last built version cache
+        uses: actions/cache@v3
+        with:
+          path: last_build_version.txt
+          key: last-build-version-cache-${{ steps.get_latest_tag.outputs.latest_tag }}
