--- a/config/.config
+++ b/config/.config
@@ -6464,7 +6464,7 @@ CONFIG_WPA_MBO_SUPPORT=y
 # CONFIG_PACKAGE_aardvark-dns is not set
 CONFIG_PACKAGE_acme=y
 CONFIG_PACKAGE_acme-acmesh=y
-# CONFIG_PACKAGE_acme-acmesh-dnsapi is not set
+CONFIG_PACKAGE_acme-acmesh-dnsapi=y
 CONFIG_PACKAGE_acme-common=y
 # CONFIG_PACKAGE_adblock is not set
 # CONFIG_PACKAGE_adblock-fast is not set
