--- a/config/.config
+++ b/config/.config
@@ -1950,7 +1950,7 @@ CONFIG_PACKAGE_i915-firmware-dmc=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl6050 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl7260 is not set
 CONFIG_PACKAGE_iwlwifi-firmware-iwl7265=y
-# CONFIG_PACKAGE_iwlwifi-firmware-iwl7265d is not set
+CONFIG_PACKAGE_iwlwifi-firmware-iwl7265d=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl8260c is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl8265 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl9000 is not set
