--- a/config/.config
+++ b/config/.config
@@ -1940,7 +1940,7 @@ CONFIG_PACKAGE_i915-firmware-dmc=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl135 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl2000 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl2030 is not set
-# CONFIG_PACKAGE_iwlwifi-firmware-iwl3160 is not set
+CONFIG_PACKAGE_iwlwifi-firmware-iwl3160=y
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl3168 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl5000 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl5150 is not set
