--- a/config/.config
+++ b/config/.config
@@ -1931,7 +1931,7 @@ CONFIG_PACKAGE_i915-firmware-dmc=y
 # CONFIG_PACKAGE_iwlwifi-firmware-ax101 is not set
 CONFIG_PACKAGE_iwlwifi-firmware-ax200=y
 CONFIG_PACKAGE_iwlwifi-firmware-ax201=y
-# CONFIG_PACKAGE_iwlwifi-firmware-ax210 is not set
+CONFIG_PACKAGE_iwlwifi-firmware-ax210=y
 # CONFIG_PACKAGE_iwlwifi-firmware-ax411 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-be200 is not set
 # CONFIG_PACKAGE_iwlwifi-firmware-iwl100 is not set
