--- a/config/.config
+++ b/config/.config
@@ -7435,8 +7435,8 @@ CONFIG_PACKAGE_coreutils-nohup=y
 # CONFIG_PACKAGE_hwclock is not set
 # CONFIG_PACKAGE_hwinfo is not set
 # CONFIG_PACKAGE_hwloc-utils is not set
-# CONFIG_PACKAGE_i2c-tools is not set
-# CONFIG_PACKAGE_i2csfp is not set
+CONFIG_PACKAGE_i2c-tools=y
+CONFIG_PACKAGE_i2csfp=y
 # CONFIG_PACKAGE_iconv is not set
 # CONFIG_PACKAGE_iio-utils is not set
 # CONFIG_PACKAGE_inotifywait is not set
