--- a/config/.config
+++ b/config/.config
@@ -6082,7 +6082,7 @@ CONFIG_PACKAGE_p910nd=y
 # CONFIG_PACKAGE_cjdns-tests is not set
 # CONFIG_PACKAGE_dcstad is not set
 # CONFIG_PACKAGE_dcwapd is not set
-# CONFIG_PACKAGE_devlink is not set
+CONFIG_PACKAGE_devlink=y
 # CONFIG_PACKAGE_frr is not set
 # CONFIG_PACKAGE_genl is not set
 # CONFIG_PACKAGE_igmpproxy is not set
